# SPA-CS3203-

./: .clang-format  .gitignore  CMakePresets.json  README.md
.github/workflows/: cmake.yml
Team37/Code37/src/spa/: CMakeCache.txt  CMakeLists.txt
Team37/Code37/src/spa/src/: Main.cpp  Parser.cpp  SIMPLEAnalyser.cpp
Team37/Code37/src/spa/src/AST/: Procedure.cpp  Procedure.h  SourceCode.cpp  SourceCode.h  TNode.cpp  TNode.h
Team37/Code37/src/spa/src/AST/ASTVisitor/: ASTVisitor.cpp  ASTVisitor.h  ConcreteASTVisitor.cpp  ConcreteASTVisitor.h  ExtractASTVisitor.cpp  ExtractASTVisitor.h  ExtractCallsASTVisitor.cpp  ExtractCallsASTVisitor.h  ExtractFollowsASTVisitor.cpp  ExtractFollowsASTVisitor.h  ExtractGeneralASTVisitor.cpp  ExtractGeneralASTVisitor.h  ExtractModifiesASTVisitor.cpp  ExtractModifiesASTVisitor.h  ExtractParentsASTVisitor.cpp  ExtractParentsASTVisitor.h  ExtractUsesASTVisitor.cpp  ExtractUsesASTVisitor.h
Team37/Code37/src/spa/src/AST/ConditionalExpression/: AndCondition.cpp  AndCondition.h  ConditionalExpression.h  NotCondition.cpp  NotCondition.h  OrCondition.cpp  OrCondition.h  RelationalExpression.cpp  RelationalExpression.h
Team37/Code37/src/spa/src/AST/Expression/: ConstantExpression.cpp  ConstantExpression.h  Expression.h  NameExpression.cpp  NameExpression.h  OperatedExpression.cpp  OperatedExpression.h
Team37/Code37/src/spa/src/AST/Operators/: Operator.h  RelationalOperator.h
Team37/Code37/src/spa/src/AST/Statement/: AssignStatement.cpp  AssignStatement.h  CallStatement.cpp  CallStatement.h  IfStatement.cpp  IfStatement.h  PrintStatement.cpp  PrintStatement.h  ReadStatement.cpp  ReadStatement.h  Statement.h  WhileStatement.cpp  WhileStatement.h
Team37/Code37/src/spa/src/CFG/: AllCFGs.cpp  AllCFGs.h  CFG.cpp  CFG.h  CFGNode.cpp  CFGNode.h  CFGVisitor.h
Team37/Code37/src/spa/src/CFG/CFGVisitor/: CFGVisitor.h  ExtractNextCFGVisitor.cpp  ExtractNextCFGVisitor.h
Team37/Code37/src/spa/src/PKB/: ElementType.h  PKB.cpp  PKB.h  PKBFacade.cpp  PKBFacade.h  QueryServicer.cpp  QueryServicer.h  StatementType.h  StmtStmtRelationType.h  Storage.cpp  Storage.h
Team37/Code37/src/spa/src/PKB/Structures/: 2DArray.cpp  Array2D.cpp  Array2D.h  ProcedureVariableStorage.cpp  ProcedureVariableStorage.h  RelationStarStorage.h  RelationStorage.h  StatementVariableStorage.cpp  StatementVariableStorage.h
Team37/Code37/src/spa/src/PKB/Types/: ProcProcRelationType.h  ProcVarRelationType.h  StatementType.h  StmtStmtRelationType.h  StmtVarRelationType.h
Team37/Code37/src/spa/src/PQL/: Parser.cpp  Parser.h  QueryEvaluator.cpp  QueryEvaluator.h  QuerySemanticsExtractor.cpp  QuerySemanticsExtractor.h
Team37/Code37/src/spa/src/QPS/: Parser.cpp  Parser.h  QPS.cpp  QPS.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryExtractor.cpp  QueryExtractor.h  QueryOptimizer.cpp  QueryOptimizer.h  QuerySemanticsExtractor.cpp  QuerySemanticsExtractor.h  QuerySyntaxChecker.cpp  QueryTokenizer.cpp  QueryTokenizer.h  QueryValidator.cpp  QueryValidator.h
Team37/Code37/src/spa/src/QPS/Evaluators/: BooleanEvaluator.h  EvaluatorUtils.cpp  EvaluatorUtils.h  GeneralEvaluator.cpp  GeneralEvaluator.h  ProcVarEvaluator.cpp  ProcVarEvaluator.h  StmtStmtEvaluator.cpp  StmtStmtEvaluator.h  StmtVarEvaluator.cpp  StmtVarEvaluator.h  SuchThatEvaluator.h  SynonymEvaluator.cpp  SynonymEvaluator.h  WithEvaluator.cpp  WithEvaluator.h
Team37/Code37/src/spa/src/QPS/Extractors/: BaseExtractor.cpp  BaseExtractor.h  ClauseExtractor.cpp  ClauseExtractor.h  DeclarationExtractor.cpp  DeclarationExtractor.h  SelectExtractor.cpp  SelectExtractor.h
Team37/Code37/src/spa/src/QPS/Structures/: PqlError.h  PqlQuery.cpp  PqlQuery.h  PqlToken.cpp  PqlToken.h
Team37/Code37/src/spa/src/QPS/Tokenizers/: DeclarationTokenizer.cpp  DeclarationTokenizer.h  GeneralTokenizer.h  PatternTokenizer.cpp  PatternTokenizer.h  SelectTokenizer.cpp  SelectTokenizer.h  SuchThatTokenizer.cpp  SuchThatTokenizer.h  TokenizerUtils.cpp  TokenizerUtils.h  WithTokenizer.cpp  WithTokenizer.h
Team37/Code37/src/spa/src/QPS/Types/: ErrorType.cpp  ErrorType.h  TokenType.cpp  TokenType.h
Team37/Code37/src/spa/src/QPS/Validators/: AffectsValidator.cpp  AffectsValidator.h  BaseValidator.cpp  BaseValidator.h  CallsValidator.cpp  CallsValidator.h  ClauseValidator.cpp  ClauseValidator.h  DeclarationValidator.cpp  DeclarationValidator.h  FollowsValidator.cpp  FollowsValidator.h  ModifiesValidator.cpp  ModifiesValidator.h  NextValidator.cpp  NextValidator.h  ParentValidator.cpp  ParentValidator.h  PatternValidator.cpp  PatternValidator.h  SelectValidator.cpp  SelectValidator.h  UsesValidator.cpp  UsesValidator.h  Validator.cpp  Validator.h  ValidatorUtils.cpp  ValidatorUtils.h  WithValidator.cpp  WithValidator.h
Team37/Code37/src/spa/src/SP/: FileNotFoundException.h  InvalidSyntaxException.h  Keywords.cpp  Keywords.h  Parser.cpp  Parser.h  ParserVisitor.cpp  ParserVisitor.h  SP.cpp  SP.h  TokeniserVisitor.cpp  TokeniserVisitor.h  Tokenizer.cpp  Tokenizer.h  Utils.cpp  Utils.h  Visitor.cpp  Visitor.h
Team37/Code37/src/spa/src/SP/Utilities/: CallLoopChecker.cpp  CallLoopChecker.h  ConditionalExpressionNode.h  Keywords.cpp  Keywords.h  Utils.cpp  Utils.h
Team37/Code37/src/unit_testing/: CMakeLists.txt
Team37/Code37/src/unit_testing/src/: FullTest.cpp  SPTest.cpp  SPTestCallLoopChecker.cpp  SPTestParser.cpp  SPTestTokenizer.cpp  Scratch.cpp  TestAST.cpp  TestASTVisitor.cpp  TestCFG.cpp  TestFollowsASTVisitor.cpp  TestModifiesASTVisitor.cpp  TestPKBPatternMatching.cpp  TestPKBQueryServicer.cpp  TestPKBStorage.cpp  TestPKBStructures.cpp  TestParentsASTVisitor.cpp  TestQueryEvaluator.cpp  TestQueryExtractor.cpp  TestQueryExtractorUtils.cpp  TestQueryExtractorUtils.h  TestQuerySemanticsExtractor.cpp  TestQuerySemanticsExtractorUtils.h  TestQueryTokenizer.cpp  TestQueryValidator.cpp  TestUsesASTVisitor.cpp  TestsCallsASTVisitor.cpp
Team37/Code37/src/unit_testing/src/QPS/: QueryTokenizerTest.cpp
Team37/Code37/src/unit_testing/src/utils/: TestQueryExtractorUtils.cpp  TestQueryExtractorUtils.h  TestQuerySemanticsExtractorUtils.cpp
(+190 files in other folders)
